infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  ingressClassName: nginx
  rules:
    - host: sonvh.shop
      http: 
        paths:
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/ticket/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: client-srv
                port:
                  number: 3000
